# Blockword

./: LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: smart_contratct_test.yml
contracts/: blockword.sol
public/: index.html
scripts/: deploy.py
smart_contracts/: brownie-config.yaml
smart_contracts/contracts/: blockword.sol
smart_contracts/scripts/: deploy.py
smart_contracts/tests/: conftest.py  test_blockword.py  test_blockword_owner.py
src/: App.css  App.js
src/components/: app_header.js  footer.js  header.js  main_home.js
src/screens/: BlockwordApp.js  Home.js
