[tool.poetry]
name = "blockword"
version = "0.1.0"
description = ""
authors = ["NikOneZ1 <nikita.verba18052004@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-brownie = "^1.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
